k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudops-api
  namespace: default
  labels:
    app: cloudops-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudops-api
  template:
    metadata:
      labels:
        app: cloudops-api
    spec:
      containers:
      - name: cloudops-api
        image: 326709068429.dkr.ecr.us-east-1.amazonaws.com/cloudops-api:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
