k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-direct
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus
    pod-template-hash: "98b55cc79"
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
